--- a/pom.xml
+++ b/pom.xml
@@ -136,7 +136,7 @@
             <!-- Default configuration for running with: mvn clean javafx:run -->
             <id>default-cli</id>
             <configuration>
-              <mainClass>com.example.sportx/com.example.sportx.mainApplication</mainClass>
+              <mainClass>com.example.sportx/com.example.sportmarket.mainApplication</mainClass>
               <launcher>app</launcher>
               <jlinkZipName>app</jlinkZipName>
               <jlinkImageName>app</jlinkImageName>
