--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,11 @@
         <artifactId>jsoup</artifactId>
         <version>1.15.4</version>
       </dependency>
+      <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-databind</artifactId>
+        <version>2.15.2</version>
+      </dependency>
 
       <dependency>
         <groupId>org.openjfx</groupId>
@@ -222,6 +227,7 @@
         </exclusion>
       </exclusions>
     </dependency>
+
 <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-api</artifactId>
